2006-02-06  Jakub Steiner <jimmac@ximian.com>

	* scalable/places/folder-remote.svg
	* scalable/places/folder.svg
	* scalable/places/user-home.svg
	* scalable/status/folder-drag-accept.svg
	* scalable/status/folder-open.svg
	* scalable/status/folder-visiting.svg: lighten up a bit


2006-02-06  Jakub Steiner <jimmac@ximian.com>

	* folder-remote: in SVG now
	* document-print-preview: only bitmap for now
	* animations/process-working: new throbber in the animation
		context
	
2006-02-04  Rodney Dawes  <dobey@novell.com>

	* NEWS:
	* configure.in: Update for 2.13.6 release

2006-02-03  Rodney Dawes  <dobey@novell.com>

	* configure.in: Up icon-naming-utils requirement to 0.6.7

2006-02-03  Rodney Dawes  <dobey@novell.com>

	* */filesystems/gnome-fs-regular.*:
	Remove this icon to be replaced by text-x-preview

	* */mimetypes/Makefile.am:
	Update for additions/removals of icons

	* */mimetypes/gnome-mime-application-x-gnome-saved-search.*:
	This is replaced by folder-saved-search in the places context

	* */mimetypes/text-x-preview.*: New icon to replace the ugly old
	gnome-fs-regular icon for people who use text previews

	* 24x24/*/*.png: Updated to use the 22x22 icons with 1px border
	
2006-02-03  Rodney Dawes  <dobey@novell.com>

	* 16x16/filesystems/Makefile.am:
	* 16x16/filesystems/gnome-fs-regular.png:
	Add new-style icon for gnome-fs-regular at 16x16 size

2006-02-03  Luca Ferretti  <elle.uca@libero.it>

	* 48x48/Makefile.am: remove mimetype from SUBDIRS to fix the build

2006-02-01  Rodney Dawes  <dobey@novell.com>

	* configure.in: Remove 48x48/mimetypes/Makefile from AC_CONFIG_FILES

	* 48x48/mimetypes: Remove these icons

2006-01-23  Luca Ferretti  <elle.uca@libero.it>

	* 48x48/mimetypes/Makefile.am: remove all entries in icon_DATA, icons
	for MIME types are now under scalable (someone should remove files from
	repository too).

2006-01-23  Luca Ferretti  <elle.uca@libero.it>

	* scalable/devices/Makefile.am: