@@ -51,6 +51,7 @@ gnome-icon-theme.pc
 48x48/Makefile
 scalable/Makefile
 16x16/actions/Makefile
+16x16/animations/Makefile
 16x16/apps/Makefile
 16x16/categories/Makefile
 16x16/devices/Makefile
